# server.js
@@ -1,11 +1,6 @@
 const express = require("express");
 const cors = require("cors");
 const connectDB = require("./config/db");
-const doctorRoutes = require("./routes/doctorRouter");
-const especialtyRouter = require("./routes/specialtyRouter");
-const hospitalRouter = require("./routes/hospitalRouter");
-const userRouter = require("./routes/userRouter")
-
 require("dotenv").config();
 
 const app = express();
@@ -18,10 +13,9 @@ app.use(express.json());
 // Connect DB
 connectDB();
 
-app.use("/api/doctors", doctorRoutes);
-app.use("/api/specialties", especialtyRouter);
-app.use("/api/hospital", hospitalRouter);
-app.use("/api/users", userRouter);
+// Routes
+const apiRoutes = require("./routes");
+app.use("/", apiRoutes);
 
 
 // Server
