# swagger.json
@@ -8,8 +8,7 @@
   "host": "localhost:5000",
   "basePath": "/",
   "schemes": [
-    "http",
-    "https"
+    "http"
   ],
   "paths": {
     "/api-docs": {
@@ -120,7 +119,7 @@
         "tags": [
           "Doctors"
         ],
-        "summary": "Update Doctor by ID",
+        "summary": "Update a Doctor",
         "description": "",
         "parameters": [
           {
@@ -128,14 +127,41 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "phone": {
+                  "example": "any"
+                },
+                "gender": {
+                  "example": "any"
+                },
+                "specialty": {
+                  "example": "any"
+                },
+                "hospital": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
+          "204": {
+            "description": "No Content"
           },
           "404": {
             "description": "Not Found"
@@ -180,7 +206,7 @@
         "tags": [
           "Doctors"
         ],
-        "summary": "Get Doctor by Speciality",
+        "summary": "Get Docotr by ID",
         "description": "",
         "parameters": [
           {
@@ -441,14 +467,29 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "address": {
+                  "example": "any"
+                },
+                "phone": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
+          "204": {
+            "description": "No Content"
           },
           "404": {
             "description": "Not Found"
